# plt-platform

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  API.md  API_ENDPOINTS.md  ARCHITECTURE.md  DELIVERY_MANIFEST.md  Dockerfile  FILES_CREATED.txt  LAUNCH_GUIDE.md  Makefile  PHASE_1C_SUMMARY.md  PHASE_3_BUILD_SUMMARY.md  PHASE_3_CHECKLIST.md  PHASE_3_DEPENDENCIES.txt  PHASE_5A_DEPLOYMENT.md  PHASE_5B_FILES_CREATED.txt  PHASE_5B_TESTS_SUMMARY.md  README.md  SETUP.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
frontend/: .gitignore  PROJECT_STRUCTURE.md  README.md  package.json  tailwind.config.js
phases/phase1_foundation/: SPEC.md  UPDATES.md
phases/phase2_agents_prompts/: SPEC.md  UPDATES.md
phases/phase3_langgraph_orchestration/: SPEC.md  UPDATES.md
phases/phase4_api_services/: SPEC.md  UPDATES.md
phases/phase5_integration/: SPEC.md  UPDATES.md
scripts/: entrypoint.sh  generate_demo_pdf.py  seed_data.py  wait_for_it.sh
src/agents/: README.md  __init__.py  example_usage.py  graph.py  runner.py  state.py
src/api/: deps.py  main.py  websocket.py
src/core/: celery_app.py  celery_tasks.py  config.py
src/db/: base.py
src/services/: __init__.py  auth.py  contracts.py  data_pipeline.py  digital_twin.py  events.py  inventory.py
tests/: conftest.py  eval_phase5.py  test_api_endpoints.py  test_integration.py  test_phase5_e2e.py
tests/fixtures/: apple_health_sample.xml  (+2 more)
(+101 files in other folders)
